--- a/constructor/construct.yaml
+++ b/constructor/construct.yaml
@@ -1,6 +1,10 @@
 name: EMAN2
 version: 2.2
 
+installer_filename: eman2.2.mac.sh      # [osx]
+installer_filename: eman2.2.linux64.sh  # [linux]
+installer_filename: eman2.2.win64.exe   # [win]
+
 channels:
     - http://repo.continuum.io/pkgs/free/
     - https://conda.anaconda.org/conda-forge/
