--- a/constructor/construct.yaml
+++ b/constructor/construct.yaml
@@ -18,6 +18,7 @@ specs:
   - eman2 2.2             # [not linux]
   - eman2 2.2 np18py27_0  # [linux]
   - libgfortran 1.0       # [linux]
+  - hdf5 1.8.17
   - conda
   - conda-build
   - pip
