--- a/constructor/construct.yaml
+++ b/constructor/construct.yaml
@@ -15,7 +15,9 @@ channels:
 keep_pkgs: True
 
 specs:
-  - eman2 2.2
+  - eman2 2.2             # [not linux]
+  - eman2 2.2 np18py27_0  # [linux]
+  - libgfortran 1.0       # [linux]
   - conda
   - conda-build
   - pip
