--- a/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
+++ b/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
@@ -10,7 +10,8 @@ RUN bash /workspace/yum.sh && \
     curl -v -L -O https://github.com/cryoem/eman2/archive/v2.2.tar.gz && \
     tar xzvf eman2-2.2.tar.gz && \
     conda build eman2-2.2/recipes/eman -c cryoem -c defaults -c conda-forge && \
-    conda install eman2 --use-local
+    conda install eman2 --use-local && \
+    conda build purge-all
 
 
 ENV PATH /root/miniconda2/bin:$PATH
