don't copy set_conda_environment.sh

--- a/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
+++ b/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
@@ -4,7 +4,7 @@ FROM nvidia/cuda:8.0-devel-centos7
 ENV LANG en_US.UTF-8
 
 WORKDIR /workspace
-COPY docker-images/eman-nvidia-cuda8-centos7/yum.sh set_conda_environment.sh /workspace/
+COPY docker-images/eman-nvidia-cuda8-centos7/yum.sh /workspace/
 RUN bash /workspace/yum.sh
 RUN curl -v -L https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -o miniconda.sh
 RUN pwd && ls
