--- a/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
+++ b/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
@@ -9,6 +9,8 @@ RUN bash /workspace/yum.sh
 RUN curl -v -L https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -o miniconda.sh
 RUN pwd && ls && ls /root
 RUN bash miniconda.sh -bf -p /workspace
+RUN source /workspace/miniconda2/bin/activate root
+RUN conda config --set show_channel_urls true
 
 ENV PATH /root/miniconda2/bin:$PATH
 ENV PYTHONUNBUFFERED 1
