--- a/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
+++ b/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /workspace
 COPY docker-images/eman-nvidia-cuda8-centos7/yum.sh /workspace/
 RUN bash /workspace/yum.sh
 RUN curl -v -L https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -o miniconda.sh
-RUN pwd && ls && ls /root
+RUN pwd && ls && ls /root && whoami
 
 ENV PATH /root/miniconda2/bin:$PATH
 ENV PYTHONUNBUFFERED 1
