--- a/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
+++ b/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
@@ -17,6 +17,14 @@ RUN yum install -y \
 RUN curl -v -L https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -o miniconda.sh
 RUN pwd && ls && ls /root && whoami
 RUN bash miniconda.sh -b
+RUN source /root/miniconda2/bin/activate root
+RUN conda config --set show_channel_urls true
+RUN conda install conda-build --yes
+RUN curl -v -L -O https://github.com/cryoem/eman2/archive/v2.2.tar.gz
+RUN tar xzvf eman2-2.2.tar.gz
+RUN conda build eman2-2.2/recipes/eman -c cryoem -c defaults -c conda-forge
+RUN conda install eman2 --use-local
+RUN conda build purge-all
 
 ENV PATH /root/miniconda2/bin:$PATH
 ENV PYTHONUNBUFFERED 1
