--- a/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
+++ b/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
@@ -19,12 +19,7 @@ RUN pwd && ls && ls /root && whoami
 RUN bash miniconda.sh -b && \
     source /root/miniconda2/bin/activate root && \
     conda config --set show_channel_urls true && \
-    conda install conda-build --yes && \
-    curl -v -L -O https://github.com/cryoem/eman2/archive/v2.2.tar.gz && \
-    tar xzvf eman2-2.2.tar.gz && \
-    conda build eman2-2.2/recipes/eman -c cryoem -c defaults -c conda-forge && \
-    conda install eman2 --use-local && \
-    conda build purge-all
+    conda install conda-build --yes
 
 ENV PATH /root/miniconda2/bin:$PATH
 ENV PYTHONUNBUFFERED 1
