--- a/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
+++ b/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
@@ -21,7 +21,10 @@ RUN bash miniconda.sh -b && \
     conda config --set show_channel_urls true && \
     conda install conda-build --yes && \
     curl -v -L -O https://github.com/cryoem/eman2/archive/v2.2.tar.gz
-RUN ls
+RUN tar xzvf v2.2.tar.gz && \
+    conda build eman2-2.2/recipes/eman -c cryoem -c defaults -c conda-forge && \
+    conda install eman2 --use-local && \
+    conda build purge-all
 
 ENV PATH /root/miniconda2/bin:$PATH
 ENV PYTHONUNBUFFERED 1
