--- a/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
+++ b/docker-images/eman-nvidia-cuda8-centos7/Dockerfile
@@ -22,7 +22,7 @@ RUN bash miniconda.sh -b && \
     conda install conda-build --yes && \
     curl -v -L -O https://github.com/cryoem/eman2/archive/v2.2.tar.gz && \
     tar xzvf v2.2.tar.gz && \
-    conda build eman2-2.2/recipes/eman -c cryoem -c defaults -c conda-forge && \
+    conda build eman2-2.2/recipes/eman -c cryoem -c defaults -c conda-forge --numpy 1.8 && \
     conda install eman2 --use-local && \
     conda build purge-all
 
