yum install bzip2

--- a/docker-images/eman-centos7/Dockerfile
+++ b/docker-images/eman-centos7/Dockerfile
@@ -7,6 +7,7 @@ ENV PYTHONUNBUFFERED 1
 RUN yum install -y \
                gcc \
                gcc-c++ \
+               bzip2 \
                mesa-libGLU-devel \
                libXext-devel \
                libXrender-devel \
