generic eman spec, no numpy string in construct.yaml

--- a/constructor/construct.yaml
+++ b/constructor/construct.yaml
@@ -17,8 +17,7 @@ keep_pkgs: True
 ignore_duplicate_files: True
 
 specs:
-  - eman2 2.2             # [not linux]
-  - eman2 2.2 np18py27_0  # [linux]
+  - eman2 2.2
   - libgfortran 1.0       # [linux]
   - conda
   - conda-build
