--- a/constructor/construct.yaml
+++ b/constructor/construct.yaml
@@ -15,8 +15,7 @@ channels:
 keep_pkgs: True
 
 specs:
-  - eman2 2.21             # [not linux]
-  - eman2 2.21 np18py27_0  # [linux]
+  - eman2 2.21
   - libgfortran 1.0       # [linux]
   - hdf5 1.8.17
   - conda
