add spec: libgfortran 1.0

--- a/constructor/construct.yaml
+++ b/constructor/construct.yaml
@@ -19,6 +19,7 @@ ignore_duplicate_files: True
 specs:
   - eman2 2.2             # [not linux]
   - eman2 2.2 np18py27_0  # [linux]
+  - libgfortran 1.0       # [linux]
   - conda
   - conda-build
   - pip
