--- a/constructor/construct.yaml
+++ b/constructor/construct.yaml
@@ -1,9 +1,8 @@
 name: EMAN2
-version: 2.2
 
-installer_filename: eman2.2.mac.sh      # [osx]
-installer_filename: eman2.2.linux64.sh  # [linux]
-installer_filename: eman2.2.win64.exe   # [win]
+installer_filename: eman2.mac.sh    # [osx]
+installer_filename: eman2.linux.sh  # [linux]
+installer_filename: eman2.win.exe   # [win]
 
 channels:
     - https://conda.anaconda.org/cryoem
