Revert "update default channel, move anaconda below main, add trailing slashes"
This reverts commit 1e8c9d0d909686caa9ab6145e8da535cb73a8b94.

--- a/constructor/construct.yaml
+++ b/constructor/construct.yaml
@@ -6,12 +6,12 @@ installer_filename: eman2.linux.sh  # [linux]
 installer_filename: eman2.win.exe   # [win]
 
 channels:
-    - https://conda.anaconda.org/cryoem/
-    - http://repo.continuum.io/pkgs/main/
-    - http://conda.anaconda.org/anaconda/
+    - https://conda.anaconda.org/cryoem
+    - http://repo.continuum.io/pkgs/free/
+    - http://conda.anaconda.org/anaconda
     - https://conda.anaconda.org/conda-forge/
-    - http://repo.continuum.io/pkgs/msys2/         # [win]
-    - file:///place_holder_conda_prefix/conda-bld/
+    - http://repo.continuum.io/pkgs/msys2          # [win]
+    - file:///place_holder_conda_prefix/conda-bld
 
 keep_pkgs: True
 ignore_duplicate_files: True
